Fixed education alignment

--- a/src/Pages/CV/education/education.css
+++ b/src/Pages/CV/education/education.css
@@ -1,5 +1,4 @@
 .education-body{
-    /*min-height: 60vh;*/
     background-image:url("../../../assets/images/cvpagepic2.jpg");
     background-repeat: no-repeat;
     background-position-x: center;
@@ -11,27 +10,24 @@
 .education-blackbackground{
     background-color: rgba(58, 58, 58, 0.802);
     width:100%;
-    /*min-height:60vh;*/
 }
 
 .education {
-    /*margin: 20px;*/
     text-align: left;
 }
 
-/* Education section title */
 .education-title {
     font-size: 35px;
     font-weight: bold;
     text-align: left;
-    margin: 0px 20px 30px 0px;
+    margin: 0px 20px 20px 0px;
 }
 
 .award-title {
     font-size: 35px;
     font-weight: bold;
     text-align: left;
-    margin: 0px 20px 20px 20px;
+    margin: 0px 20px 20px 0px;
 }
 
 .education-container {
@@ -98,7 +94,7 @@
 .university-name,
 .program-dates,
 .awards {
-    font-size: calc(0.3vw + 0.9vw);
+    font-size: calc(0.3vw + 0.9em);
     margin-bottom: 10px;
 }
 
@@ -130,7 +126,7 @@
     flex-direction: column;
     justify-content: left;
     text-align: left;
-    margin: 0px 20px 20px 20px;
+    margin: 0px 20px 20px 0px;
 }
 
 .awards-title {
@@ -140,7 +136,16 @@
 }
 
 .awards-description {
-    font-size: calc(0.3vw + 0.9vw);
+    font-size: calc(0.3vw + 0.9em);
     margin-bottom: 10px;
     text-align: justify;
+}
+
+@media screen and (max-width: 700px) {
+    .awards-container {
+        flex-direction: column;
+    }
+    .award-item {
+        width: 100%;
+    }
 }
